--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <section class="profile">
       <div class="profile__avatar">
         <img src="<%=require('./images/avatar-image.jpg')%>" alt="Аватарка юзера" class="profile__avatar-image">
+        <button class="profile__avatar-overlay"></button>
       </div>
       <div class="profile__info">
         <h1 class="profile__info_header">
@@ -40,46 +41,54 @@
     </p>
   </footer>
 
-  <div class="popup" id="popup-edit">
-    <form action="" class="form" id="form-edit" novalidate>
-      <div class="form__container">
-        <h2 class="form__heading">Редактировать профиль</h2>
+  <div class="popup" id="popup-edit"> 
+    <div class="form__container"> 
+      <h2 class="form__heading">Редактировать профиль</h2> 
+      <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы 1" class="form__close-icon" id="form-edit-close-icon">
+      <form action="" class="form" id="form-edit" novalidate>
+        <div class="form__input_container">
           <input type="text" class="form__profile_name form__item" name="profile-name" placeholder="Имя" minlength="2" maxlength="40" required>
-          <span class="error form__validation-text-upper" id="profile-name-error"></span>
-          <input type="text" class="form__profile_motto form__item form__item_last" name="profile-motto" placeholder="О себе" minlength="2" maxlength="200" required>
-          <span class="error form__validation-text-lower" id="profile-motto-error"></span>
+          <span class="error form__validation-text" id="profile-name-error"></span>
+        </div>
+        <div class="form__input_container">
+          <input type="text" class="form__profile_motto form__item" name="profile-motto" placeholder="О себе" minlength="2" maxlength="200" required>
+          <span class="error form__validation-text" id="profile-motto-error"></span>
+        </div>
         <button class="form__save-button form__button-blocked">Сохранить</button>
-        <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы 1" class="form__close-icon" id="form-edit-close-icon">
-      </div>
-    </form>
+      </form>
+    </div>
   </div>  
 
   <div class="popup" id="popup-add">
-    <form action="" class="form" id="form-add" type="submit" novalidate>
-      <div class="form__container">
-        <h2 class="form__heading">Новое место</h2>
+    <div class="form__container">
+      <h2 class="form__heading">Новое место</h2>
+      <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon" id="form-add-close-icon">
+      <form action="" class="form" id="form-add" type="submit" novalidate>
+        <div class="form__input_container">
           <input type="text" class="form__profile_name form__item" name="place-name" placeholder="Название" minlength="2" maxlength="30" required>
-          <span class="error form__validation-text-upper" id="place-name-error"></span>
-          <input type="text" class="form__profile_motto form-link form__item form__item_last" name="place-link" placeholder="Ссылка на картинку" type="url" required>
-          <span class="error form__validation-text-lower" id="place-link-error"></span>
-          <button class="form__save-button form__button-blocked" type="submit">Создать</button>
-          <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon" id="form-add-close-icon">
-      </div>
-    </form>
+          <span class="error form__validation-text" id="place-name-error"></span>
+        </div>
+        <div class="form__input_container">
+          <input class="form__profile_motto form-link form__item" name="place-link" placeholder="Ссылка на картинку" type="url" required>
+          <span class="error form__validation-text" id="place-link-error"></span>
+        </div>
+        <button class="form__save-button form__button-blocked" type="submit">Создать</button>
+      </form>
+    </div>
   </div> 
 
   <div class="popup" id="popup-avatar">
-    <form action="" class="form__single-line" id="form-add" type="submit" novalidate>
-      <div class="form__container">
-        <h2 class="form__heading">Обновить аватар</h2>
-          <div class="form__input_container">
-            <input type="text" class="form__profile_motto form-link form__item form__item_last" name="place-link" placeholder="Ссылка на картинку" type="url" required>
-            <span class="error form__validation-text-lower" id="place-link-error"></span>
-          </div>
-          <button class="form__save-button form__button-blocked" type="submit">Создать</button>
-          <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon" id="form-add-close-icon">
-      </div>
-    </form>
+    <div class="form__container form__single-line">
+      <h2 class="form__heading">Обновить аватар</h2>
+      <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon" id="form-add-close-icon">
+      <form action="" class="form " id="form-avatar" type="submit" novalidate>
+        <div class="form__input_container">
+          <input class="form__profile_motto form-link form__item" name="avatar-link" placeholder="Ссылка на картинку" type="url" required>
+          <span class="error form__validation-text" id="avatar-link-error"></span>
+        </div>
+        <button class="form__save-button form__button-blocked" type="submit">Создать</button>
+      </form>
+    </div>
   </div> 
 
   <template id="card-template">
