v 8.0 first working as per Serge's comments

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
   <div class="popup" id="popup-add">
     <div class="form__container">
       <h2 class="form__heading">Новое место</h2>
-      <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon" id="form-add-close-icon">
+      <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon">
       <form action="" class="form" id="form-add" type="submit" novalidate>
         <div class="form__input_container">
           <input type="text" class="form__profile_name form__item" name="place-name" placeholder="Название" minlength="2" maxlength="30" required>
@@ -80,7 +80,7 @@
   <div class="popup" id="popup-avatar">
     <div class="form__container form__single-line">
       <h2 class="form__heading">Обновить аватар</h2>
-      <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon" id="form-add-close-icon">
+      <img src="<%=require('./images/close_icon.svg')%>" alt="Крестик формы" class="form__close-icon">
       <form action="" class="form " id="form-avatar" type="submit" novalidate>
         <div class="form__input_container">
           <input class="form__profile_motto form-link form__item" name="avatar-link" placeholder="Ссылка на картинку" type="url" required>
