v 8.1 corrections as per Sergey's comments

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
           <input class="form__profile_motto form-link form__item" name="avatar-link" placeholder="Ссылка на картинку" type="url" required>
           <span class="form__validation-text" id="avatar-link-error"></span>
         </div>
-        <button class="form__save-button form__button-blocked" type="submit">Создать</button>
+        <button class="form__save-button form__button-blocked" type="submit">Сохранить</button>
       </form>
     </div>
   </div> 
