v 8.1 corrections as per Sergey's comments

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,8 @@
         <button class="profile__avatar-overlay"></button>
       </div>
       <div class="profile__info">
-        <h1 class="profile__info_header">
-        </h1>
-        <h3 class="profile__info_description">
-        </h3>
+        <h1 class="profile__info_header"></h1>
+        <h3 class="profile__info_description"></h3>
         <div class="profile__info_edit-button">
           <img src="<%=require('./images/pencil.svg')%>" alt="Редактировать аватарку" class="profile__info_image">
         </div>
