--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   
   <footer class="footer">
     <p class="footer__text">
-      © 2023 Mesto Russia
+      © 2023 Anton Plekhov
     </p>
   </footer>
 
